--- a/iddawgsfinalproject/about.html
+++ b/iddawgsfinalproject/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About this project</title>
+<title>About the final project</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -193,7 +193,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About this project</h1>
+<h1 class="title toc-ignore">About the final project</h1>
 
 </div>
 
